--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ rich = "^13.5.2"
 iprogress = "^0.4"
 ipywidgets = "^8.1.0"
 sqlalchemy = "^2.0.19"
+scikit-learn = "^1.3.0"
+
 textual = { version = "^0.32.0", optional = true }
 
 [tool.poetry.group.dev.dependencies]
