--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,17 +32,16 @@ html2text = "^2020.1.16"
 nbconvert = "^7.7.3"
 ipykernel = "^6.25.1"
 
-[tool.poetry.group.example]
-optional = true
-
-[tool.poetry.group.example.dependencies]
-llama-index = "^0.8.2.post1"
-instructorembedding = "^1.0.1"
-sentence-transformers = "^2.2.2"
-langchain = "^0.0.265"
-
 [tool.coverage.run]
 omit = ["**/__init__.py"]
+
+[tool.coverage.report]
+exclude_also = [
+    "@abstractmethod",
+    "def __repr__",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:"
+]
 
 [tool.mypy]
 exclude = [".venv"]
