--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-litellm = "^0.1.392"
+litellm = { git = "https://github.com/BerriAI/litellm", rev = "068930f" }
 evaluate = "^0.4.0"
 cuid2 = "^2.0.0"
 graphviz = "^0.20.1"
@@ -16,6 +16,8 @@ iprogress = "^0.4"
 ipywidgets = "^8.1.0"
 sqlalchemy = "^2.0.19"
 scikit-learn = "^1.3.0"
+sentence-transformers = "^2.2.2"
+transformers = "^4.31.0"
 
 textual = { version = "^0.32.0", optional = true }
 
