--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ sqlalchemy = "^2.0.19"
 scikit-learn = "^1.3.0"
 sentence-transformers = "^2.2.2"
 transformers = "^4.31.0"
+torch = ">=2.0.0, !=2.0.1"
 
 textual = { version = "^0.32.0", optional = true }
 
@@ -28,7 +29,6 @@ pytest-benchmark = "^4.0.0"
 pytest-cov = "^4.1.0"
 mypy = "^1.5.0"
 black = "^23.7.0"
-torch = "^2.0.1"
 python-dotenv = "^1.0.0"
 html2text = "^2020.1.16"
 nbconvert = "^7.7.3"
