Ensure examples to work

--- a/.github/workflows/cmd_examples.yaml
+++ b/.github/workflows/cmd_examples.yaml
@@ -49,9 +49,9 @@ jobs:
       - name: Install dependencies
         run: task install
 
-      - name: Run Examples
+      - name: Run all examples
         run: |
-          task run:examples 
+          task run:example:all
       ### END
 
       - name: Add comment to PR
