--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,6 +48,9 @@ jobs:
       - name: Test
         run: task test:ci
 
+      - name: Run basic example
+        run: task run:example:basic
+
       - name: Upload test coverage
         uses: codecov/codecov-action@v3
         with:
