--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-litellm = { git = "https://github.com/BerriAI/litellm", rev = "068930f" }
+litellm = "^0.1.426"
 evaluate = "^0.4.0"
 cuid2 = "^2.0.0"
 graphviz = "^0.20.1"
