Add tokenize and logit_bias_for_classification

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  # TODO: only do this for integration tests workflows
+  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+  COHERE_API_KEY: ${{ secrets.COHERE_API_KEY }}
+  AI21_API_KEY: ${{ secrets.AI21_API_KEY }}
+
 jobs:
   ci:
     strategy:
