--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+openai = "^0.27.8"
+cohere = "^4.20.2"
+tiktoken = "^0.4.0"
 litellm = "^0.1.426"
 evaluate = "^0.4.0"
 cuid2 = "^2.0.0"
