--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -13,7 +13,9 @@ tasks:
   test:bench: poetry run pytest --benchmark-only tests/benchmark
   test:cov: poetry run pytest --benchmark-disable --cov=fastrepl --cov-report=term-missing -n auto {{.CLI_ARGS}}
 
-  todo: rg "TODO" --hidden
+  todo: rg "TODO"
+  todo:ci: grep -r 'TODO!' ./fastrepl && exit 1 || exit 0
+
   fmt: poetry run black fastrepl tests
   lint: poetry run mypy fastrepl tests
   clean: rm -f .local/*.gv .local/*.png
