--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.9"
 openai = "^0.27.8"
 cohere = "^4.20.2"
 tiktoken = "^0.4.0"
-litellm = "^0.1.426"
+litellm = "^0.1.428"
 evaluate = "^0.4.0"
 cuid2 = "^2.0.0"
 graphviz = "^0.20.1"
@@ -21,6 +21,7 @@ scikit-learn = "^1.3.0"
 sentence-transformers = "^2.2.2"
 transformers = "^4.31.0"
 torch = ">=2.0.0, !=2.0.1"
+datasets = "^2.14.4"
 
 textual = { version = "^0.32.0", optional = true }
 
