--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -8,6 +8,9 @@ on:
   pull_request:
     paths: ["docs/**"]
 
+permissions:
+  issues: write
+
 jobs:
   preview:
     if: github.event_name == 'pull_request'
