--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["yujonglee <yujonglee.dev@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.12"
 openai = "^0.27.8"
 cohere = "^4.20.2"
 tiktoken = "^0.4.0"
