Implement disk cache for LLM api (#29)
* Initial implementation

* Pass CI?

* Check if table exist before clearing

* rollback and add metadata create_all

* create if table not exists

* Pass CI, please

* This will pass, really.

* pass ci

* Fix test

* Enhance testing

* Enhance structure

* Update filename

* More testing

* Update examples

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ transformers = "^4.31.0"
 torch = ">=2.0.0, !=2.0.1"
 datasets = "^2.14.4"
 backoff = "^2.2.1"
+sqlalchemy = "^2.0.20"
 
 textual = { version = "^0.32.0", optional = true }
 
