--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ litellm = "^0.1.461"
 evaluate = "^0.4.0"
 cuid2 = "^2.0.0"
 graphviz = "^0.20.1"
-rich = "^13.5.2"
+rich = {extras = ["jupyter"], version = "^13.5.2"}
 iprogress = "^0.4"
 ipywidgets = "^8.1.0"
 scikit-learn = "^1.3.0"
