--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Task
         uses: arduino/setup-task@v1
-
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Set up Python 3.11
         uses: actions/setup-python@v2
         with:
