--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ torch = ">=2.0.0, !=2.0.1"
 datasets = "^2.14.4"
 backoff = "^2.2.1"
 sqlalchemy = "^2.0.20"
+jinja2 = "^3.1.2"
 
 textual = { version = "^0.32.0", optional = true }
 
