--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ python = ">=3.9,<3.12"
 openai = "^0.27.8"
 cohere = "^4.20.2"
 tiktoken = "^0.4.0"
-litellm = "^0.1.461"
+litellm = "^0.1.492"
+gptcache = "^0.1.40"
 evaluate = "^0.4.0"
 cuid2 = "^2.0.0"
 graphviz = "^0.20.1"
@@ -23,8 +24,6 @@ transformers = "^4.31.0"
 torch = ">=2.0.0, !=2.0.1"
 datasets = "^2.14.4"
 backoff = "^2.2.1"
-sqlalchemy = "^2.0.20"
-jinja2 = "^3.1.2"
 
 textual = { version = "^0.32.0", optional = true }
 
