--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "fastrepl"
 version = "0.0.1"
-description = "Simple Run-Eval-Polish Loop with LLM"
+description = "Fast Run-Eval-Polish Loop for LLM App"
 authors = ["yujonglee <yujonglee.dev@gmail.com>"]
 readme = "README.md"
 
