--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,7 +1,10 @@
 version: '3'
 
 tasks:
-  install: POETRY_VIRTUALENVS_IN_PROJECT=true poetry install --no-cache --no-interaction
+  install:
+    cmds:
+      - POETRY_VIRTUALENVS_IN_PROJECT=true poetry install --no-cache --no-interaction
+      - poetry run pre-commit install
   
   run: poetry run python3 {{.CLI_ARGS}}
   run:example:basic: poetry run jupyter nbconvert --to notebook --inplace --execute examples/basic.ipynb
