Implement custom warning and error handling (#77)
* Initial sketch

* Update pre-commit hook

* Polish

* Fix warn signature

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,8 @@ repos:
     rev: v1.5.0
     hooks:
     -   id: mypy
-        args: [--ignore-missing-imports, ./]
+        # NOTEL: This should mirror [tool.mypy] in pyproject.toml 
+        args: [fastrepl, tests, --exclude, .venv, --explicit-package-bases, --ignore-missing-imports, --enable-incomplete-feature, Unpack]
         language: system
         pass_filenames: false
         stages: [pre-push]
