--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ html2text = "^2020.1.16"
 nbconvert = "^7.7.3"
 ipykernel = "^6.25.1"
 pre-commit = "^3.3.3"
+baserun = "^0.5.2"
 
 [tool.coverage.run]
 omit = ["**/__init__.py"]
