--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ transformers = "^4.31.0"
 torch = ">=2.0.0, !=2.0.1"
 datasets = "^2.14.4"
 backoff = "^2.2.1"
+statsmodels = "^0.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
